fix: issues on Safari browser

--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -24,6 +24,11 @@
     justify-content: center;
     width: 24px;
     height: 24px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &--loader {
