--- a/src/components/Radio/styles.scss
+++ b/src/components/Radio/styles.scss
@@ -18,6 +18,11 @@
     border-radius: 50%;
     margin-right: 12px;
 
+    svg {
+      width: 12px;
+      height: 12px;
+    }
+
     &.selected {
       border-color: var(--main-color);
       background-color: var(--main-color);
